<resources>
    <string name="app_name">Geasy</string>
    <string name="logo_here">LOGO HERE</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="or">Atau</string>
    <string name="subtitle_login">Gizi Anda adalah Prioritas Kami</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="geasy">GEasy</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="tab_label1">Health Information</string>
    <string name="tab_label2">Last Overview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="faktanya">Rekomendasi dosis vitamin C setiap harinya untuk pria adalah 90 mg dan untuk wanita adalah 75 mg. Khusus untuk perokok membutuhkan dosis tambahan sebanyak 35 mg.</string>
    <string name="keluhan_4">Lambat-penyembuhan luka atau infeksi dan \nsering terjadi</string>
    <string name="keluhan_8">Bangun di malam hari untuk buang air kecil \n(nocturia) dan mengompol</string>


    <array name="sports_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
    </array>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
    </string-array>
    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
    </string-array>

</resources>
