<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context="id.ac.uii.a16523169students.kumis.HomeActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pagerSlide"
        android:layout_width="395dp"
        android:layout_height="200dp"
        android:layout_margin="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pagerSlide"
        android:layout_marginTop="42dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/pagerSlide"
            android:layout_below="@+id/pagerSlide">

            <ImageView
                android:id="@+id/sportsImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="@id/sportsImage"
                android:padding="8dp"
                android:text="@string/title_placeholder"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <TextView
                android:id="@+id/newsTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sportsImage"
                android:padding="8dp"
                android:text="@string/news_placeholder"
                android:textColor="?android:textColorSecondary" />

            <TextView
                android:id="@+id/subTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsTitle"
                android:padding="8dp"
                android:text="@string/sports_info_placeholder" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
